@startuml
'https://plantuml.com/sequence-diagram

class ToDoManager
{
    main()
    start()
}

javafx.Application <|-- ToDoManager

class ToDoManagerController{

    - ToDoList: List
    - String: Desc, Date
    - int: currentCommand, validInput

    @FXML
    + DisplayList
    + UserPrompt
    + UserInput

    public newItemClicked()
    public NewToDoListClicked()
    public deleteItemClicked()
    public editDescriptionClicked()
    public editDateClicked()
    public markDoneClicked()

    public ShowAllClicked()
    public ShowIncompleteClicked()
    public ShowCompletedClicked()

    public SaveClicked()
    public LoadClicked()

    public PreviousItemClicked()
    public NextItemClicked()

    public EnterListener()
    private CurrentCommand()

    public getDateInput()
    public getDescInput()
    public createDisplay()

    @Override initialize()
}

ToDoManager - ToDoManagerController
ToDoManagerController <-- ToDoList

class ToDoList
{
    - ArrayList: ToDoItem
    - int: CurrentItem

    Constructor ToDoList()

    public newItem()

    public nextItem()
    public prevItem()

    public editItemDate()
    public editItemDesc()
    public editItemDone()

    public getItem()

    public ItemSize()
    public isDone()

    public removeItem()
    public clearItemList()
}

class ToDoItem
{

    - String: Done
    - String: description
    - String: Date

    Constructor ToDoItem()

    public String getDate()
    public void setDate()

    public String getDesc()
    public void setDesc()

    public String getDone()
    public void setDone()

    public setTrue()
}
ToDoList <-- ToDoItem

class FileManager
{
    public ListToFile()
    public FileToList()
}

ToDoManagerController <-- FileManager

@enduml